chore: Change to more specific exception